fixed padding and alignment

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -403,6 +403,7 @@ nav{
                 top: 0;
                 bottom: 0;
                 margin: auto;
+                margin-right: 30%;
                 z-index: 10;
 
                 display: inline-flex;
@@ -632,10 +633,11 @@ footer{
 }
 
 #circ{
-    width: 100%;
+    width: 300px;
     height: auto;
-    bottom: 40%;
     position: absolute;
+    left: 9%;
+    transform-origin: left top
 }
 
 /*
